RESOLVED FIXED180991
[Fetch] Extracting a body of type Blob should not set Content-Type to the empty string
https://bugs.webkit.org/show_bug.cgi?id=180991
Summary [Fetch] Extracting a body of type Blob should not set Content-Type to the emp...
Chris Dumez
Reported 2017-12-19 12:47:06 PST
Extracting a body of type Blob should not Content-Type to the empty string as per: - https://fetch.spec.whatwg.org/#concept-bodyinit-extract
Attachments
Patch (3.30 KB, patch)
2017-12-19 12:48 PST, Chris Dumez
no flags
Archive of layout-test-results from ews100 for mac-elcapitan (2.42 MB, application/zip)
2017-12-19 13:43 PST, EWS Watchlist
no flags
Patch (8.51 KB, patch)
2017-12-19 13:57 PST, Chris Dumez
no flags
Archive of layout-test-results from ews100 for mac-elcapitan (2.42 MB, application/zip)
2017-12-19 14:38 PST, EWS Watchlist
no flags
Patch (13.18 KB, patch)
2017-12-19 14:47 PST, Chris Dumez
no flags
Patch (13.19 KB, patch)
2017-12-19 15:17 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-12-19 12:48:37 PST
EWS Watchlist
Comment 2 2017-12-19 13:43:04 PST
Comment on attachment 329798 [details] Patch Attachment 329798 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/5757801 New failing tests: imported/w3c/web-platform-tests/fetch/api/basic/request-headers.any.html http/wpt/fetch/fetch-as-blob.html http/wpt/fetch/fetch-as-blob-worker.html imported/w3c/web-platform-tests/fetch/api/basic/request-headers.any.worker.html
EWS Watchlist
Comment 3 2017-12-19 13:43:06 PST
Created attachment 329806 [details] Archive of layout-test-results from ews100 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Chris Dumez
Comment 4 2017-12-19 13:57:02 PST
EWS Watchlist
Comment 5 2017-12-19 14:38:02 PST
Comment on attachment 329815 [details] Patch Attachment 329815 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/5759253 New failing tests: imported/w3c/web-platform-tests/fetch/api/basic/request-headers.any.worker.html
EWS Watchlist
Comment 6 2017-12-19 14:38:04 PST
Created attachment 329829 [details] Archive of layout-test-results from ews100 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Chris Dumez
Comment 7 2017-12-19 14:47:37 PST
youenn fablet
Comment 8 2017-12-19 15:14:43 PST
Comment on attachment 329834 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=329834&action=review > Source/WebCore/ChangeLog:8 > + Extracting a body of type Blob should not Content-Type to the empty string as per: s/not/not set/
Chris Dumez
Comment 9 2017-12-19 15:17:47 PST
WebKit Commit Bot
Comment 10 2017-12-19 17:16:02 PST
Comment on attachment 329839 [details] Patch Clearing flags on attachment: 329839 Committed r226162: <https://trac.webkit.org/changeset/226162>
WebKit Commit Bot
Comment 11 2017-12-19 17:16:04 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12 2017-12-19 17:20:32 PST
Note You need to log in before you can comment on or make changes to this bug.