[Fetch] Extracting a body of type Blob should not set Content-Type to the empty string https://bugs.webkit.org/show_bug.cgi?id=180991

Reviewed by Youenn Fablet.

LayoutTests/imported/w3c:

Rebaseline WPT test now that it is passing.

* web-platform-tests/service-workers/service-worker/invalid-blobtype.https-expected.txt:

Source/WebCore:

Extracting a body of type Blob should not set Content-Type to the empty string as per:
- https://fetch.spec.whatwg.org/#concept-bodyinit-extract

No new tests, rebaselined existing test.

* Modules/fetch/FetchBody.cpp:
(WebCore::FetchBody::extract):


Canonical link: https://commits.webkit.org/196891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226162 268f45cc-cd09-0410-ab3c-d52691b4dbfc